k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-frontend-phan-quan
  labels:
    name: assignment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: sso
      student: phan-quan
  template:
    metadata:
      labels:
        component: sso
        student: phan-quan
    spec:
      containers:
        - name: static
          image: tqkent/sso-frontend:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
