k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-frontend-phan-quan
  labels:
    name: assignment
spec:
  type: ClusterIP
  selector:
    component: sso
    student: phan-quan
  ports:
    - port: 3000
      targetPort: 3000
